--- a/proyect.css
+++ b/proyect.css
@@ -28,3 +28,17 @@ li{
     border:solid 1px red;
 
 }
+.description{
+    width:100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+.description-breve{
+    width:300px;
+    height:400px;
+    border:solid 1px hotpink;
+    margin-left: 30px;
+}
