--- a/proyect.css
+++ b/proyect.css
@@ -1,21 +1,42 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap');
+:root{
+--color-fondo-principal:#fffffe;
+--color-titular-principal:#00214d;
+--color-parrafo-principal:#1b2d45;
+}
 *{
     margin:0;
     padding:0;
+    box-sizing: border-box;
+}
+body{
+    background-color:var(--color-fondo-principal);
 }
 header{
-    width:100vw;
-    height:100vh;
+    width:100%;
+    height:100%;
 }
 .header-principal{
     width:100%;
     height:100px;
+    padding-left: 20px;
+    padding-right: 20px;
+    
     display:flex;
     justify-content:space-between;
     align-items: center;
-    border:solid 1px purple;
+}
+figure{
+    width:100px;
+    height:100px;
+}
+#iconoMenu{
+    width:100px;
+    height:100px;   
 }
 nav{
-    border:solid 1px blue;
+    
+    font-family: 'Montserrat', sans-serif;
 }
 ul{
     list-style: none;
@@ -25,20 +46,53 @@ ul{
 li{
     width:100px;
     margin-right:20px;
-    border:solid 1px red;
+    text-align: center;
 
+}
+li > a{
+   text-decoration: none;
+    font-size: 20px;
+    font-weight:600;
+    color:var(--color-titular-principal);
 }
 .description{
     width:100%;
-    height: 100%;
+    height: auto;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    font-family: 'Montserrat', sans-serif;
+    
 }
 .description-breve{
-    width:300px;
-    height:400px;
-    border:solid 1px hotpink;
-    margin-left: 30px;
+    width:40%;
+    height:500px;
+    padding:30px;
+    
+}
+.description-breve > h1{
+    width:100%;
+    height: 30%;
+    text-transform:capitalize;
+    text-align: center;
+    color:var(--color-titular-principal);
+    word-spacing: 0.2rem;
+}
+.description-breve > p{
+    width:100%;
+    height:70%;
+    color:var(--color-parrafo-principal);
+    font-size: 1.5rem;
+    text-align: justify;
+    line-height: 1.4;
+}
+.ilustracion-menu{
+    width:60%;
+    height:500px;
+    object-fit: cover;
+}
+.ilustracion-menu > img{
+    width:100%;
+    height:100%;
 }
