--- a/index.css
+++ b/index.css
@@ -60,7 +60,8 @@ li > a{
   
 }
 li:hover{
-    border-bottom:solid 5px var(--color-destacar);
+    border-bottom: solid 5px;
+    border-color: var(--color-destacar);
 
 }
 .description{
