--- a/index.css
+++ b/index.css
@@ -105,3 +105,78 @@ li:hover{
     width:100%;
     height:100%;
 }
+.sobreNosotros{
+    width:100%;
+    height:50vh;
+    display:flex;
+    justify-content: center;
+    font-family: 'Montserrat', sans-serif;
+    border:solid 1px hotpink;
+    background-color: var(--color-titular-principal);
+}
+.description-sobreNosotros{
+    width:750px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+.description-sobreNosotros > h2{
+    font-weight: 600;
+    color:var(--color-fondo-principal);
+    margin-bottom: 30px;
+}
+.description-sobreNosotros > p{
+    color:var(--color-destacar);
+    text-align: justify;
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+ .subtitulo{
+    width: 100%;
+    padding-top: 20px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    color: var(--color-titular-principal);
+}
+.proyectos-contenedor{
+    width:100%;
+    height:auto;
+    padding-top: 40px;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-auto-rows: 1fr;
+    row-gap: 2rem;
+    justify-items: center;
+}
+.card {
+    width:300px;
+    height:400px;
+    display: flex;
+    flex-direction: column;
+    border:solid 1px blue;
+    border-radius: 10px;
+}
+
+.card__cover{
+width:100%;
+height:60%;
+}
+.card__cover > img{
+    width:100%;
+    height:100%;
+    object-fit: cover;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.card__content {
+   text-align: center;
+   font-family: 'Montserrat', sans-serif;
+}
+.card__content > h4{
+    font-weight: 700;
+}
+.card__content > p{
+    font-weight: 400;
+}
