--- a/index.css
+++ b/index.css
@@ -80,6 +80,7 @@ li:hover{
     width:40%;
     height:500px;
     padding:30px;
+    background-color: aliceblue;
     
 }
 .description-breve > h1{
@@ -95,6 +96,7 @@ li:hover{
     height:70%;
     color:var(--color-parrafo-principal);
     font-size: 1.5rem;
+    font-weight: 400;
     text-align: justify;
     line-height: 1.4;
 }
@@ -163,16 +165,21 @@ li:hover{
 .card {
     width:250px;
     height:320px;
-    background-color: #fffffe;
+    background-color: blue;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
     box-shadow: 0px 7px 16px 0px rgba(0,0,0,0.75);
+    animation: animation1 2s ease 0s  normal none;
 }
-
 .card__cover{
 width:100%;
 height:60%;
+display:grid;
+  grid-template:"a";
+}
+.card__cover > *{
+    grid-area:a;
 }
 .card__cover > img{
     width:100%;
@@ -181,10 +188,43 @@ height:60%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
+.card__cover > figcaption{
+    background: rgba(236, 240, 241, 0.76);
+  backdrop-filter: blur(3px);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  opacity:1;
+}
+#cambio:hover{
+    opacity:0;
+    transition:opacity 500ms;
+}
 .card__content {
+    height:40%;
     padding-top: 20px;
    text-align: center;
    font-family: 'Montserrat', sans-serif;
+   border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    
+}
+@keyframes animation1 {
+    0% {
+      opacity: 0;
+    }
+    25% {
+        opacity: 0.3;
+      }
+      50%{
+          opacity:0.5;
+      }
+      75%{
+          opacity:0.8;
+      }
+      100%{
+          opacity:1
+      }
 }
 .card__content > h4{
     padding-bottom: 10px;
@@ -195,7 +235,7 @@ height:60%;
 }
 .boton-direcionador{
     width:100%;
-    height:120px;
+    height:100px;
     display:flex;
     background-color: black;
     justify-content: center;
@@ -206,15 +246,15 @@ height:60%;
     height:auto;
     background-color: var(--color-terciario);
     color:var(--color-morado-text);
-    padding:20px;
+    padding:15px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 18px;
     border-radius: 10px;
     border-color: darkorange;
 }
 footer{
     width:100%;
     height:400px;
-    background-color: #00ebc7;
+    background-color:yellow;
 }
